# AdaScript

./: CMakeLists.txt  LICENSE  README.md  documentation.md  tracker.bss
NuKiTa/: main.py  main.spec
NuKiTa/nukita_app/: __init__.py  console.py  editor.py  highlighter.py  main.py  main_window.py  project.py  ref_index.py  welcome.py  wizard.py
build-linux/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-linux/builtins/: datastructures.ad  libs.ad
builtins/: algorithms.ad  lru_cache.ad
docs/: C_API.md  FS_API.md  Language.md  StdLib.md
examples/: hello.ad  smoke_libs.ad  test_algos_graph.ad  test_c_run.ad  test_fs_content.ad  test_http.ad  test_queue_deque.ad
include/: AdaScript.h
src/: main.cpp
testings/: concat.ad  concat_native.ad  host.c  native_concat_plugin.c  native_load_demo.ad  proc_demo.ad  test.ad  test_c_api.c
tests/: c_api_test.c
